--- a/parse-starter-project-1.12.0 (1)/ParseStarterProject-Swift/Resources/Base.lproj/Main.storyboard
+++ b/parse-starter-project-1.12.0 (1)/ParseStarterProject-Swift/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -63,12 +63,35 @@
                         <outlet property="emailAddress" destination="NJU-Xc-yoj" id="u0d-hD-L2g"/>
                         <outlet property="loading" destination="vn0-X6-CYa" id="RmF-NN-hDm"/>
                         <outlet property="password" destination="YIP-LU-nEb" id="fTk-p2-u8H"/>
-                        <segue destination="MgP-Dt-OAI" kind="presentation" identifier="go_to_my_account" id="0hy-C9-7f7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="316" y="336"/>
+        </scene>
+        <!--News Feed View Controller-->
+        <scene sceneID="x6z-7Z-mHb">
+            <objects>
+                <viewController id="kAl-wC-Y2q" customClass="NewsFeedViewController" customModule="pickIt" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Xaz-dD-7lZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="GUv-wu-jgC"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CV5-Ns-dtm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0fP-Dn-b6v">
+                                <rect key="frame" x="45" y="50" width="510" height="513"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zR4-O2-sJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="696" y="1041"/>
         </scene>
         <!--My Account-->
         <scene sceneID="vnZ-Qn-7IP">
