--- a/parse-starter-project-1.12.0 (1)/ParseStarterProject-Swift/Resources/Base.lproj/Main.storyboard
+++ b/parse-starter-project-1.12.0 (1)/ParseStarterProject-Swift/Resources/Base.lproj/Main.storyboard
@@ -22,6 +22,7 @@
                                 <state key="normal" title="Register/SignUp"/>
                                 <connections>
                                     <action selector="registerOrSignIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yAj-Fe-ihR"/>
+                                    <segue destination="kAl-wC-Y2q" kind="show" id="qTD-zA-iwu"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YIP-LU-nEb">
