--- a/pickIt/Resources/Base.lproj/Main.storyboard
+++ b/pickIt/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -54,7 +54,7 @@
                                     <rect key="frame" x="121" y="135" width="159" height="30"/>
                                 </variation>
                             </textField>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="vn0-X6-CYa">
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="vn0-X6-CYa">
                                 <rect key="frame" x="262" y="475" width="20" height="20"/>
                                 <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
                                     <rect key="frame" x="190" y="336" width="20" height="20"/>
@@ -137,15 +137,15 @@
                                 <exclude reference="e2v-ia-sRa"/>
                                 <exclude reference="cAe-aG-e4k"/>
                                 <exclude reference="uVg-0B-VmA"/>
+                                <exclude reference="1Sj-fG-b4B"/>
+                                <exclude reference="22Y-ca-4eP"/>
+                                <exclude reference="KFE-Ut-lD9"/>
+                                <exclude reference="OGF-ef-cZV"/>
                                 <exclude reference="9tp-YX-RfD"/>
                                 <exclude reference="FHF-Bw-9E8"/>
                                 <exclude reference="gGP-Ry-dKe"/>
                                 <exclude reference="hn6-Rb-3s1"/>
                                 <exclude reference="tuM-u5-FTS"/>
-                                <exclude reference="1Sj-fG-b4B"/>
-                                <exclude reference="22Y-ca-4eP"/>
-                                <exclude reference="KFE-Ut-lD9"/>
-                                <exclude reference="OGF-ef-cZV"/>
                                 <exclude reference="lRN-Vh-hoI"/>
                                 <exclude reference="rm0-9c-vOe"/>
                                 <exclude reference="133-c9-zIL"/>
@@ -163,9 +163,9 @@
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="constraints">
+                                <exclude reference="OGF-ef-cZV"/>
                                 <exclude reference="FHF-Bw-9E8"/>
                                 <exclude reference="tuM-u5-FTS"/>
-                                <exclude reference="OGF-ef-cZV"/>
                                 <exclude reference="lRN-Vh-hoI"/>
                                 <exclude reference="VSf-Bz-DUf"/>
                                 <exclude reference="dsg-EO-D0u"/>
@@ -185,12 +185,12 @@
                                 <include reference="e2v-ia-sRa"/>
                                 <include reference="cAe-aG-e4k"/>
                                 <include reference="uVg-0B-VmA"/>
-                                <include reference="9tp-YX-RfD"/>
-                                <exclude reference="gGP-Ry-dKe"/>
-                                <include reference="hn6-Rb-3s1"/>
                                 <include reference="1Sj-fG-b4B"/>
                                 <exclude reference="22Y-ca-4eP"/>
                                 <exclude reference="KFE-Ut-lD9"/>
+                                <include reference="9tp-YX-RfD"/>
+                                <exclude reference="gGP-Ry-dKe"/>
+                                <include reference="hn6-Rb-3s1"/>
                                 <include reference="rm0-9c-vOe"/>
                                 <include reference="133-c9-zIL"/>
                                 <include reference="QPh-cY-b2P"/>
@@ -205,19 +205,13 @@
                         <outlet property="emailAddress" destination="NJU-Xc-yoj" id="u0d-hD-L2g"/>
                         <outlet property="loading" destination="vn0-X6-CYa" id="RmF-NN-hDm"/>
                         <outlet property="password" destination="YIP-LU-nEb" id="fTk-p2-u8H"/>
-<<<<<<< HEAD
                         <outlet property="userName" destination="sua-xH-AxL" id="s76-Yw-Jcl"/>
-=======
->>>>>>> e5c8c03a17ae43e9e09ed47d35275d0c282f42a9
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="301.5" y="336"/>
         </scene>
-<<<<<<< HEAD
-        <!--My Account View Controller-->
-=======
         <!--News Feed View Controller-->
         <scene sceneID="x6z-7Z-mHb">
             <objects>
@@ -242,8 +236,7 @@
             </objects>
             <point key="canvasLocation" x="696" y="1041"/>
         </scene>
-        <!--My Account-->
->>>>>>> e5c8c03a17ae43e9e09ed47d35275d0c282f42a9
+        <!--My Account View Controller-->
         <scene sceneID="vnZ-Qn-7IP">
             <objects>
                 <viewController id="MgP-Dt-OAI" customClass="MyAccountViewController" customModule="pickIt" customModuleProvider="target" sceneMemberID="viewController">
