--- a/parse-starter-project-1.12.0 (1)/ParseStarterProject-Swift/Resources/Base.lproj/Main.storyboard
+++ b/parse-starter-project-1.12.0 (1)/ParseStarterProject-Swift/Resources/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Log In View Controller-->
@@ -63,17 +64,16 @@
                         <outlet property="emailAddress" destination="NJU-Xc-yoj" id="u0d-hD-L2g"/>
                         <outlet property="loading" destination="vn0-X6-CYa" id="RmF-NN-hDm"/>
                         <outlet property="password" destination="YIP-LU-nEb" id="fTk-p2-u8H"/>
-                        <segue destination="MgP-Dt-OAI" kind="presentation" identifier="go_to_my_account" id="0hy-C9-7f7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="316" y="336"/>
         </scene>
-        <!--My Account-->
+        <!--My Account View Controller-->
         <scene sceneID="vnZ-Qn-7IP">
             <objects>
-                <viewController id="MgP-Dt-OAI" customClass="MyAccount" sceneMemberID="viewController">
+                <viewController id="MgP-Dt-OAI" customClass="MyAccountViewController" customModule="pickIt" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="FIV-Z9-eup"/>
                         <viewControllerLayoutGuide type="bottom" id="PAv-sU-HxJ"/>
@@ -81,12 +81,180 @@
                     <view key="view" contentMode="scaleToFill" id="APX-xx-poz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2B-gC-8Q1">
+                                <rect key="frame" x="123" y="73" width="41" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="55" y="151" width="41" height="21"/>
+                                </variation>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="l3G-hG-fgV">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="248" y="142" width="97" height="30"/>
+                                </variation>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fey-et-G1n">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="55" y="81" width="45" height="21"/>
+                                </variation>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lus-hY-uy8">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="248" y="72" width="97" height="30"/>
+                                </variation>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Account Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Xg-IZ-B5b">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="123" y="28" width="155" height="21"/>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIe-Gf-vgy">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="52" y="218" width="45" height="21"/>
+                                </variation>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lb6-A6-JFv">
+                                <rect key="frame" x="-25" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="248" y="204" width="97" height="30"/>
+                                </variation>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m41-3j-ZYk">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Edit Account"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="157" y="568" width="87" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="editAccount:" destination="MgP-Dt-OAI" eventType="touchUpInside" id="lW7-Ya-bwc"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Lus-hY-uy8" firstAttribute="top" secondItem="6Xg-IZ-B5b" secondAttribute="bottom" constant="50" id="BTU-Er-yJQ"/>
+                            <constraint firstItem="l3G-hG-fgV" firstAttribute="leading" secondItem="y2B-gC-8Q1" secondAttribute="trailing" constant="100" id="BaT-rb-owE"/>
+                            <constraint firstItem="6Xg-IZ-B5b" firstAttribute="top" secondItem="FIV-Z9-eup" secondAttribute="bottom" constant="20" id="Evi-O9-Asl"/>
+                            <constraint firstItem="y2B-gC-8Q1" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="50" id="IIE-MQ-rUp"/>
+                            <constraint firstItem="l3G-hG-fgV" firstAttribute="leading" secondItem="y2B-gC-8Q1" secondAttribute="trailing" constant="100" id="Itj-5G-hGh"/>
+                            <constraint firstItem="fey-et-G1n" firstAttribute="top" secondItem="FIV-Z9-eup" secondAttribute="bottom" constant="50" id="MrI-P0-eSo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="l3G-hG-fgV" secondAttribute="trailing" constant="50" id="OQF-Fx-JnY"/>
+                            <constraint firstItem="l3G-hG-fgV" firstAttribute="top" secondItem="Lus-hY-uy8" secondAttribute="bottom" constant="50" id="PkR-Hf-cQV"/>
+                            <constraint firstItem="lb6-A6-JFv" firstAttribute="top" secondItem="l3G-hG-fgV" secondAttribute="bottom" constant="50" id="T72-Cj-Elj"/>
+                            <constraint firstItem="y2B-gC-8Q1" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="50" id="V9a-2K-g5j"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="l3G-hG-fgV" secondAttribute="trailing" constant="50" id="VFu-zx-Atp"/>
+                            <constraint firstItem="lb6-A6-JFv" firstAttribute="leading" secondItem="WIe-Gf-vgy" secondAttribute="trailing" constant="100" id="Yf7-Eu-6Ta"/>
+                            <constraint firstItem="fey-et-G1n" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="50" id="ZbJ-tl-PtQ"/>
+                            <constraint firstItem="WIe-Gf-vgy" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="50" id="a3J-hc-9Ri"/>
+                            <constraint firstItem="y2B-gC-8Q1" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="81" id="bBW-J9-Vhy"/>
+                            <constraint firstItem="y2B-gC-8Q1" firstAttribute="top" secondItem="fey-et-G1n" secondAttribute="bottom" constant="50" id="bzA-hk-2bC"/>
+                            <constraint firstItem="WIe-Gf-vgy" firstAttribute="top" secondItem="y2B-gC-8Q1" secondAttribute="bottom" constant="50" id="flZ-zQ-zEq"/>
+                            <constraint firstItem="y2B-gC-8Q1" firstAttribute="leading" secondItem="APX-xx-poz" secondAttribute="leadingMargin" constant="50" id="kd3-kh-htz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lb6-A6-JFv" secondAttribute="trailing" constant="50" id="qWe-UV-esM"/>
+                            <constraint firstItem="Lus-hY-uy8" firstAttribute="leading" secondItem="fey-et-G1n" secondAttribute="trailing" constant="100" id="rho-w6-j0M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Lus-hY-uy8" secondAttribute="trailing" constant="50" id="xPo-C7-pif"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="l3G-hG-fgV"/>
+                                <exclude reference="fey-et-G1n"/>
+                                <exclude reference="Lus-hY-uy8"/>
+                                <exclude reference="6Xg-IZ-B5b"/>
+                                <exclude reference="WIe-Gf-vgy"/>
+                                <exclude reference="lb6-A6-JFv"/>
+                                <exclude reference="m41-3j-ZYk"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="MrI-P0-eSo"/>
+                                <exclude reference="ZbJ-tl-PtQ"/>
+                                <exclude reference="Evi-O9-Asl"/>
+                                <exclude reference="IIE-MQ-rUp"/>
+                                <exclude reference="V9a-2K-g5j"/>
+                                <exclude reference="bBW-J9-Vhy"/>
+                                <exclude reference="bzA-hk-2bC"/>
+                                <exclude reference="kd3-kh-htz"/>
+                                <exclude reference="a3J-hc-9Ri"/>
+                                <exclude reference="flZ-zQ-zEq"/>
+                                <exclude reference="BTU-Er-yJQ"/>
+                                <exclude reference="rho-w6-j0M"/>
+                                <exclude reference="xPo-C7-pif"/>
+                                <exclude reference="BaT-rb-owE"/>
+                                <exclude reference="Itj-5G-hGh"/>
+                                <exclude reference="OQF-Fx-JnY"/>
+                                <exclude reference="PkR-Hf-cQV"/>
+                                <exclude reference="VFu-zx-Atp"/>
+                                <exclude reference="T72-Cj-Elj"/>
+                                <exclude reference="Yf7-Eu-6Ta"/>
+                                <exclude reference="qWe-UV-esM"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="l3G-hG-fgV"/>
+                                <include reference="fey-et-G1n"/>
+                                <include reference="Lus-hY-uy8"/>
+                                <include reference="6Xg-IZ-B5b"/>
+                                <include reference="WIe-Gf-vgy"/>
+                                <include reference="lb6-A6-JFv"/>
+                                <include reference="m41-3j-ZYk"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="MrI-P0-eSo"/>
+                                <include reference="ZbJ-tl-PtQ"/>
+                                <include reference="Evi-O9-Asl"/>
+                                <include reference="IIE-MQ-rUp"/>
+                                <exclude reference="V9a-2K-g5j"/>
+                                <exclude reference="bBW-J9-Vhy"/>
+                                <include reference="bzA-hk-2bC"/>
+                                <exclude reference="kd3-kh-htz"/>
+                                <include reference="a3J-hc-9Ri"/>
+                                <include reference="flZ-zQ-zEq"/>
+                                <include reference="BTU-Er-yJQ"/>
+                                <include reference="rho-w6-j0M"/>
+                                <include reference="xPo-C7-pif"/>
+                                <exclude reference="BaT-rb-owE"/>
+                                <include reference="Itj-5G-hGh"/>
+                                <include reference="OQF-Fx-JnY"/>
+                                <include reference="PkR-Hf-cQV"/>
+                                <exclude reference="VFu-zx-Atp"/>
+                                <include reference="T72-Cj-Elj"/>
+                                <include reference="Yf7-Eu-6Ta"/>
+                                <include reference="qWe-UV-esM"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="emailValue" destination="l3G-hG-fgV" id="Rbs-nx-XM2"/>
+                        <outlet property="nameValue" destination="Lus-hY-uy8" id="ZTT-lZ-zaT"/>
+                        <outlet property="scoreValue" destination="lb6-A6-JFv" id="Yfs-mq-9oP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ofl-fH-I1i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1075" y="336"/>
+            <point key="canvasLocation" x="1140" y="322.5"/>
         </scene>
     </scenes>
 </document>
