--- a/pickIt/Resources/Base.lproj/Main.storyboard
+++ b/pickIt/Resources/Base.lproj/Main.storyboard
@@ -464,6 +464,7 @@
                         <viewControllerLayoutGuide type="bottom" id="AsP-Ul-xYl"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VFg-d4-Lc2">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dfS-29-lOo">
